--- a/BoscoStay.ApartmentsManagement/Dockerfile.original
+++ b/BoscoStay.ApartmentsManagement/Dockerfile.original
@@ -5,6 +5,7 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
+EXPOSE 8081
 
 
 # This stage is used to build the service project
@@ -12,10 +13,6 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["BoscoStay.ApartmentsManagement/BoscoStay.ApartmentsManagement.csproj", "BoscoStay.ApartmentsManagement/"]
-COPY ["Application/Application.csproj", "Application/"]
-COPY ["Domain/Domain.csproj", "Domain/"]
-COPY ["Persistence/Persistence.csproj", "Persistence/"]
-COPY ["Identity/Identity.csproj", "Identity/"]
 RUN dotnet restore "./BoscoStay.ApartmentsManagement/BoscoStay.ApartmentsManagement.csproj"
 COPY . .
 WORKDIR "/src/BoscoStay.ApartmentsManagement"
