--- a/BoscoStay.ApartmentsManagement/appsettings.json
+++ b/BoscoStay.ApartmentsManagement/appsettings.json
@@ -2,8 +2,22 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    //"Default": "Server=pg-ashraf.f.aivencloud.com;Port=19907;Database=BoscoStay;Username=avnadmin;Password=AVNS_CsAY4_1V-MRX6BuaxQv;Include Error Detail=True;"
+    "Default": "Server=host.docker.internal;Port=5432;Database=BoscoStay;Username=postgres;Password=123;Include Error Detail=True;"
+    //"Default": "Server=localhost;Port=5432;Database=BoscoStay;Username=postgres;Password=123;Include Error Detail=True;"
+    //"Default": "Server=127.0.0.1;Port=5432;Database=BoscoStay;Username=postgres;Password=123;Include Error Detail=True;"
+  },
+  "JwtConfiguration": {
+    "SecretKey": "SkillSphereEncrypted$SkillSphereEncrypted$"
+  },
+  "MailJet": {
+    "ApiKey": "b5330c29074562e2764ce6d05500c09f",
+    "ApiSecret": "4a3dde0026b89756f301fb101b96c61e"
+  },
+  "Encryption:Key": "B0$cO$t@y___123"
 }
