- Add RabbitMQ sync for apartment changes

--- a/BoscoStay.ApartmentsManagement/appsettings.json
+++ b/BoscoStay.ApartmentsManagement/appsettings.json
@@ -19,5 +19,7 @@
     "ApiKey": "b5330c29074562e2764ce6d05500c09f",
     "ApiSecret": "4a3dde0026b89756f301fb101b96c61e"
   },
-  "Encryption:Key": "B0$cO$t@y___123"
+  "Encryption:Key": "B0$cO$t@y___123",
+  "RabbitMQ:QueueName": "apartment.change",
+  "RabbitMQ:Host": "host.docker.internal"
 }
