adjust RabbitQueueService to publish to exchagne instead of publishing to a single queue

--- a/BoscoStay.ApartmentsManagement/appsettings.json
+++ b/BoscoStay.ApartmentsManagement/appsettings.json
@@ -20,6 +20,6 @@
     "ApiSecret": "4a3dde0026b89756f301fb101b96c61e"
   },
   "Encryption:Key": "B0$cO$t@y___123",
-  "RabbitMQ:QueueName": "apartment.change",
+  "RabbitMQ:ExchangeName": "apartment.change",
   "RabbitMQ:Host": "host.docker.internal"
 }
