adjust rabbit mq connection properties configurations

--- a/BoscoStay.ApartmentsManagement/appsettings.json
+++ b/BoscoStay.ApartmentsManagement/appsettings.json
@@ -22,5 +22,7 @@
   },
   "Encryption:Key": "B0$cO$t@y___123",
   "RabbitMQ:ExchangeName": "apartment.change",
+  "RabbitMQ:Username": "bstayuser",
+  "RabbitMQ:Password": "bstaypass",
   "RabbitMQ:Host": "host.docker.internal"
 }
