--- a/BoscoStay.ApartmentsManagement/appsettings.json
+++ b/BoscoStay.ApartmentsManagement/appsettings.json
@@ -7,10 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"Default": "Server=pg-ashraf.f.aivencloud.com;Port=19907;Database=BoscoStay;Username=avnadmin;Password=AVNS_CsAY4_1V-MRX6BuaxQv;Include Error Detail=True;"
-    //"Default": "Server=host.docker.internal;Port=5434;Database=BoscoStay;Username=postgres;Password=123;Include Error Detail=True;"
-    //"Default": "Server=localhost;Port=5432;Database=BoscoStay;Username=postgres;Password=123;Include Error Detail=True;"
-    //"Default": "Server=127.0.0.1;Port=5432;Database=BoscoStay;Username=postgres;Password=123;Include Error Detail=True;"
     "Default": "Server=apartments-postgres;Port=5432;Database=BoscoStay;Username=apartment-postgres;Password=123;Include Error Detail=True;"
   },
   "JwtConfiguration": {
@@ -22,7 +18,10 @@
   },
   "Encryption:Key": "B0$cO$t@y___123",
   "RabbitMQ:ExchangeName": "apartment.change",
-  "RabbitMQ:Username": "bstayuser",
-  "RabbitMQ:Password": "bstaypass",
-  "RabbitMQ:Host": "host.docker.internal"
+  "RabbitMQ:SearchQueueName": "search.apartment.change",
+  "RabbitMQ:BookingQueueName": "booking.apartment.change",
+  "RabbitMQ:Username": "guest",
+  "RabbitMQ:Password": "guest",
+  "RabbitMQ:Host": "rabbitmq",
+  "RabbitMQ:VirtualHost": "/"
 }
