added new endpoint for AI categorization of apartments

--- a/BoscoStay.ApartmentsManagement/appsettings.json
+++ b/BoscoStay.ApartmentsManagement/appsettings.json
@@ -23,5 +23,8 @@
   "RabbitMQ:Username": "guest",
   "RabbitMQ:Password": "guest",
   "RabbitMQ:Host": "rabbitmq",
-  "RabbitMQ:VirtualHost": "/"
+  "RabbitMQ:VirtualHost": "/",
+  "Ollama:Url": "http://10.12.203.1:8080/v1/chat/completions",
+  "Ollama:Token": "aab1db4e-4c24-4bcb-9e91-de464cc35df2"
+
 }
