--- a/BoscoStay.ApartmentsManagement/appsettings.json
+++ b/BoscoStay.ApartmentsManagement/appsettings.json
@@ -7,8 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=host.docker.internal;Port=5432;Database=BoscoStay;Username=postgres;Password=123;Include Error Detail=True;"
-    //"Default": "Server=apartments-postgres;Port=5432;Database=BoscoStay;Username=apartment-postgres;Password=123;Include Error Detail=True;"
+    "Default": "Server=apartments-postgres;Port=5432;Database=BoscoStay;Username=apartment-postgres;Password=123;Include Error Detail=True;"
   },
   "JwtConfiguration": {
     "SecretKey": "SkillSphereEncrypted$SkillSphereEncrypted$"
